--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
   "$schema": "./node_modules/ng-packagr/package.schema.json",
-  "name": "@coachcare/datepicker",
-  "version": "0.9.9",
-  "description": "Angular Material Datepicker Fork with Timepicker by CoachCare",
+  "name": "@appdoone/datepicker",
+  "version": "0.0.2",
+  "description": "Angular Material Datepicker Fork with Timepicker by Appdoone",
   "keywords": [
-    "coachcare",
+    "appdoone",
     "frontend",
-    "datepicker"
+    "datepicker",
+    "timepicker",
+    "datetimepicker"
   ],
-  "author": "CoachCare.com",
-  "homepage": "https://www.coachcare.com",
+  "author": "Appdoone",
+  "homepage": "https://appdoone.com",
   "license": "MIT",
-  "repository": "github:selvera/npm-datepicker",
+  "repository": "github:appdoone/npm-datepicker",
   "bugs": {
-    "url": "https://github.com/selvera/npm-datepicker/issues"
+    "url": "https://github.com/appdoone/npm-datepicker.git/issues"
   },
   "scripts": {
     "ng": "ng",
