--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,10 +17,10 @@
       "dom"
     ],
     "paths": {
-      "@coachcare/datepicker": [
+      "@appdoone/datepicker": [
         "./datepicker/src/lib/"
       ],
-      "@coachcare/datepicker/*": [
+      "@appdoone/datepicker/*": [
         "./datepicker/src/lib/*"
       ]
     }
